added vorint classifier

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,4 +4,8 @@ RUN pip install tweepy jsonpickle tweet-preprocessor
 
 RUN [ "python", "-c", "import nltk; nltk.download('all')" ]
 
+RUN /opt/conda/bin/conda install jupyter -y
+RUN mkdir /opt/notebooks
+# RUN /opt/conda/bin/jupyter notebook --notebook-dir=/opt/notebooks --ip='*' --port=8888 --no-browser --allow-root
+
 CMD python
