docker images update

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,4 +8,7 @@ RUN /opt/conda/bin/conda install jupyter -y
 RUN mkdir /opt/notebooks
 # RUN /opt/conda/bin/jupyter notebook --notebook-dir=/opt/notebooks --ip='*' --port=8888 --no-browser --allow-root
 
+RUN pip install pika
+RUN pip install flask-restful
+
 CMD python
